# AscEmu

./: CMakeLists.txt
cmake/Compilers/: clang.cmake  gcc.cmake  msvc.cmake
cmake/Modules/: CheckPlatform.cmake  ConfigureBaseTargets.cmake  FindMySQL.cmake
cmake/Platform/freebsd/: settings.cmake
cmake/Platform/unix/: settings.cmake
cmake/Platform/win/: settings.cmake
src/shared/: CMakeLists.txt
src/shared/PrecompiledHeaders/: sharedPCH.h
